--- a/css/fases-del-desarrollo-del-software.css
+++ b/css/fases-del-desarrollo-del-software.css
@@ -7,12 +7,11 @@
 {
 	z-index: 1;
 	width: 1000px;
-	min-height: 1880.7662690428283px;
+	min-height: 1881px;
 	background-image: none;
 	border-style: none;
 	border-color: transparent;
 	background-color: #FFFFFF;
-	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -20,7 +19,7 @@
 #page_position_content
 {
 	margin-top: -1px;
-	margin-bottom: -31px;
+	margin-bottom: -87px;
 }
 
 #u166
@@ -241,7 +240,7 @@
 
 #u1062-4
 {
-	z-index: 52;
+	z-index: 53;
 	display: block;
 	vertical-align: top;
 	position: relative;
@@ -249,7 +248,7 @@
 
 #u1063-15
 {
-	z-index: 56;
+	z-index: 57;
 	display: block;
 	vertical-align: top;
 	margin-top: 18px;
@@ -268,7 +267,7 @@
 
 #u1064
 {
-	z-index: 71;
+	z-index: 72;
 	width: 626px;
 	margin-left: 20px;
 	margin-top: 14px;
@@ -277,7 +276,7 @@
 
 #u1069-39
 {
-	z-index: 73;
+	z-index: 74;
 	display: block;
 	vertical-align: top;
 	margin-left: 20px;
@@ -287,7 +286,7 @@
 
 #u1070-10
 {
-	z-index: 112;
+	z-index: 113;
 	width: 827px;
 	min-height: 67px;
 	border-width: 1px;
@@ -315,9 +314,9 @@
 {
 	z-index: 10;
 	width: 1200px;
-	padding-bottom: 20px;
+	padding-bottom: 1px;
 	left: -100px;
-	margin-top: 21px;
+	margin-top: 77px;
 }
 
 #u163_align_to_page
@@ -334,7 +333,7 @@
 	width: 231px;
 	height: 42px;
 	margin-right: -10000px;
-	margin-top: 26px;
+	margin-top: 28px;
 	left: 163px;
 }
 
@@ -344,13 +343,23 @@
 	width: 245px;
 	min-height: 62px;
 	margin-right: -10000px;
-	margin-top: 18px;
+	margin-top: 20px;
 	left: 442px;
+}
+
+#u1204
+{
+	z-index: 52;
+	width: 200px;
+	min-height: 100px;
+	margin-right: -10000px;
+	margin-top: -1px;
+	left: 980px;
 }
 
 body
 {
-	padding-bottom: 29px;
+	padding-bottom: 86px;
 }
 
 #page .verticalspacer
