--- a/css/herramientas-de-programaci_n.css
+++ b/css/herramientas-de-programaci_n.css
@@ -7,12 +7,11 @@
 {
 	z-index: 1;
 	width: 1000px;
-	min-height: 1240.7662690428283px;
+	min-height: 1241px;
 	background-image: none;
 	border-style: none;
 	border-color: transparent;
 	background-color: #FFFFFF;
-	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -20,7 +19,7 @@
 #page_position_content
 {
 	margin-top: -1px;
-	margin-bottom: -31px;
+	margin-bottom: -87px;
 }
 
 #u166
@@ -240,7 +239,7 @@
 
 #u1075-4
 {
-	z-index: 52;
+	z-index: 53;
 	display: block;
 	vertical-align: top;
 	position: relative;
@@ -248,7 +247,7 @@
 
 #u1076-4
 {
-	z-index: 56;
+	z-index: 57;
 	display: block;
 	vertical-align: top;
 	margin-top: 17px;
@@ -257,7 +256,7 @@
 
 #u1077
 {
-	z-index: 60;
+	z-index: 61;
 	width: 308px;
 	margin-left: 276px;
 	margin-top: 18px;
@@ -276,7 +275,7 @@
 
 #u1084-6
 {
-	z-index: 62;
+	z-index: 63;
 	width: 304px;
 	font-size: 11px;
 	line-height: 13px;
@@ -287,7 +286,7 @@
 
 #u1085-31
 {
-	z-index: 68;
+	z-index: 69;
 	display: block;
 	vertical-align: top;
 	margin-left: 20px;
@@ -297,7 +296,7 @@
 
 #u1097-10
 {
-	z-index: 99;
+	z-index: 100;
 	width: 827px;
 	min-height: 67px;
 	border-width: 1px;
@@ -324,9 +323,9 @@
 {
 	z-index: 10;
 	width: 1200px;
-	padding-bottom: 20px;
+	padding-bottom: 1px;
 	left: -100px;
-	margin-top: 39px;
+	margin-top: 95px;
 }
 
 #u163_align_to_page
@@ -343,7 +342,7 @@
 	width: 231px;
 	height: 42px;
 	margin-right: -10000px;
-	margin-top: 26px;
+	margin-top: 28px;
 	left: 163px;
 }
 
@@ -353,13 +352,23 @@
 	width: 245px;
 	min-height: 62px;
 	margin-right: -10000px;
-	margin-top: 18px;
+	margin-top: 20px;
 	left: 442px;
+}
+
+#u1204
+{
+	z-index: 52;
+	width: 200px;
+	min-height: 100px;
+	margin-right: -10000px;
+	margin-top: -1px;
+	left: 980px;
 }
 
 body
 {
-	padding-bottom: 29px;
+	padding-bottom: 86px;
 }
 
 #page .verticalspacer
