--- a/css/videos.css
+++ b/css/videos.css
@@ -7,12 +7,11 @@
 {
 	z-index: 1;
 	width: 1000px;
-	min-height: 1046.7662690428285px;
+	min-height: 1047px;
 	background-image: none;
 	border-style: none;
 	border-color: transparent;
 	background-color: #FFFFFF;
-	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -20,7 +19,7 @@
 #page_position_content
 {
 	margin-top: -1px;
-	margin-bottom: -31px;
+	margin-bottom: -87px;
 }
 
 #u166
@@ -233,7 +232,7 @@
 
 #u916-4
 {
-	z-index: 56;
+	z-index: 57;
 	display: block;
 	vertical-align: top;
 	position: relative;
@@ -241,7 +240,7 @@
 
 #u915-4
 {
-	z-index: 52;
+	z-index: 53;
 	display: block;
 	vertical-align: top;
 	margin-top: 5px;
@@ -250,7 +249,7 @@
 
 #u932
 {
-	z-index: 69;
+	z-index: 70;
 	width: 560px;
 	min-height: 319px;
 	border-style: none;
@@ -273,7 +272,7 @@
 
 #u934-4
 {
-	z-index: 70;
+	z-index: 71;
 	width: 560px;
 	font-size: 11px;
 	line-height: 13px;
@@ -301,7 +300,7 @@
 
 #u928-4
 {
-	z-index: 60;
+	z-index: 61;
 	display: block;
 	vertical-align: top;
 	position: relative;
@@ -309,7 +308,7 @@
 
 #u929-4
 {
-	z-index: 64;
+	z-index: 65;
 	display: block;
 	vertical-align: top;
 	margin-top: 16px;
@@ -318,7 +317,7 @@
 
 #u930
 {
-	z-index: 68;
+	z-index: 69;
 	width: 560px;
 	min-height: 319px;
 	border-style: none;
@@ -331,7 +330,7 @@
 
 #u935-4
 {
-	z-index: 74;
+	z-index: 75;
 	width: 560px;
 	font-size: 11px;
 	line-height: 13px;
@@ -344,9 +343,9 @@
 {
 	z-index: 10;
 	width: 1200px;
-	padding-bottom: 20px;
+	padding-bottom: 1px;
 	left: -100px;
-	margin-top: 34px;
+	margin-top: 90px;
 }
 
 #u163_align_to_page
@@ -363,7 +362,7 @@
 	width: 231px;
 	height: 42px;
 	margin-right: -10000px;
-	margin-top: 26px;
+	margin-top: 28px;
 	left: 163px;
 }
 
@@ -373,13 +372,23 @@
 	width: 245px;
 	min-height: 62px;
 	margin-right: -10000px;
-	margin-top: 18px;
+	margin-top: 20px;
 	left: 442px;
+}
+
+#u1204
+{
+	z-index: 52;
+	width: 200px;
+	min-height: 100px;
+	margin-right: -10000px;
+	margin-top: -1px;
+	left: 980px;
 }
 
 body
 {
-	padding-bottom: 29px;
+	padding-bottom: 86px;
 }
 
 #page .verticalspacer
