--- a/css/actividades.css
+++ b/css/actividades.css
@@ -7,12 +7,11 @@
 {
 	z-index: 1;
 	width: 1000px;
-	min-height: 565.7662690428284px;
+	min-height: 566px;
 	background-image: none;
 	border-style: none;
 	border-color: transparent;
 	background-color: #FFFFFF;
-	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -20,7 +19,7 @@
 #page_position_content
 {
 	margin-top: -1px;
-	margin-bottom: -31px;
+	margin-bottom: -87px;
 }
 
 #u166
@@ -233,7 +232,7 @@
 
 #u954
 {
-	z-index: 52;
+	z-index: 53;
 	width: 451px;
 	border-width: 4px;
 	border-style: solid;
@@ -259,7 +258,7 @@
 
 #u955-4
 {
-	z-index: 53;
+	z-index: 54;
 	display: block;
 	vertical-align: top;
 	margin-left: 21px;
@@ -276,7 +275,7 @@
 
 #buttonu959
 {
-	z-index: 57;
+	z-index: 58;
 	width: 196px;
 	border-width: 1px;
 	border-style: solid;
@@ -302,7 +301,7 @@
 
 #u961
 {
-	z-index: 59;
+	z-index: 60;
 	height: 23px;
 	width: 197px;
 	vertical-align: top;
@@ -320,7 +319,7 @@
 
 #buttonu968
 {
-	z-index: 65;
+	z-index: 66;
 	width: 198px;
 	border-width: 1px;
 	border-style: solid;
@@ -347,7 +346,7 @@
 
 #u969
 {
-	z-index: 67;
+	z-index: 68;
 	height: 23px;
 	width: 196px;
 	vertical-align: top;
@@ -365,7 +364,7 @@
 
 #buttonu965
 {
-	z-index: 61;
+	z-index: 62;
 	width: 196px;
 	border-width: 1px;
 	border-style: solid;
@@ -391,7 +390,7 @@
 
 #u967
 {
-	z-index: 63;
+	z-index: 64;
 	height: 23px;
 	width: 197px;
 	vertical-align: top;
@@ -418,7 +417,7 @@
 
 #u1088
 {
-	z-index: 69;
+	z-index: 70;
 	width: 544px;
 	margin-left: 64px;
 	margin-top: 17px;
@@ -427,7 +426,7 @@
 
 #u1089-4
 {
-	z-index: 70;
+	z-index: 71;
 	width: 417px;
 	min-height: 23px;
 	color: #005883;
@@ -438,7 +437,7 @@
 
 #u1090-4
 {
-	z-index: 74;
+	z-index: 75;
 	width: 200px;
 	position: relative;
 	margin-right: -10000px;
@@ -448,8 +447,9 @@
 {
 	z-index: 10;
 	width: 1200px;
-	padding-bottom: 20px;
+	padding-bottom: 1px;
 	left: -100px;
+	margin-top: 56px;
 }
 
 #u163_align_to_page
@@ -466,7 +466,7 @@
 	width: 231px;
 	height: 42px;
 	margin-right: -10000px;
-	margin-top: 26px;
+	margin-top: 28px;
 	left: 163px;
 }
 
@@ -476,13 +476,23 @@
 	width: 245px;
 	min-height: 62px;
 	margin-right: -10000px;
-	margin-top: 18px;
+	margin-top: 20px;
 	left: 442px;
+}
+
+#u1204
+{
+	z-index: 52;
+	width: 200px;
+	min-height: 100px;
+	margin-right: -10000px;
+	margin-top: -1px;
+	left: 980px;
 }
 
 body
 {
-	padding-bottom: 29px;
+	padding-bottom: 86px;
 }
 
 #page .verticalspacer
