--- a/css/audio.css
+++ b/css/audio.css
@@ -7,12 +7,11 @@
 {
 	z-index: 1;
 	width: 1000px;
-	min-height: 613.8270856160569px;
+	min-height: 614px;
 	background-image: none;
 	border-style: none;
 	border-color: transparent;
 	background-color: #FFFFFF;
-	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -20,7 +19,7 @@
 #page_position_content
 {
 	margin-top: -1px;
-	margin-bottom: -31px;
+	margin-bottom: -87px;
 }
 
 #u166
@@ -242,7 +241,7 @@
 
 #u909-5
 {
-	z-index: 52;
+	z-index: 53;
 	display: block;
 	vertical-align: top;
 	position: relative;
@@ -252,7 +251,7 @@
 
 #u910
 {
-	z-index: 57;
+	z-index: 58;
 	width: 509px;
 	min-height: 131px;
 	border-style: none;
@@ -265,7 +264,7 @@
 
 #u914-4
 {
-	z-index: 58;
+	z-index: 59;
 	display: block;
 	vertical-align: top;
 	position: relative;
@@ -277,8 +276,9 @@
 {
 	z-index: 10;
 	width: 1200px;
-	padding-bottom: 20px;
+	padding-bottom: 1px;
 	left: -100px;
+	margin-top: 30px;
 }
 
 #u163_align_to_page
@@ -295,7 +295,7 @@
 	width: 231px;
 	height: 42px;
 	margin-right: -10000px;
-	margin-top: 26px;
+	margin-top: 28px;
 	left: 163px;
 }
 
@@ -305,13 +305,23 @@
 	width: 245px;
 	min-height: 62px;
 	margin-right: -10000px;
-	margin-top: 18px;
+	margin-top: 20px;
 	left: 442px;
+}
+
+#u1204
+{
+	z-index: 52;
+	width: 200px;
+	min-height: 100px;
+	margin-right: -10000px;
+	margin-top: -1px;
+	left: 980px;
 }
 
 body
 {
-	padding-bottom: 29px;
+	padding-bottom: 86px;
 }
 
 #page .verticalspacer
