--- a/css/autor.css
+++ b/css/autor.css
@@ -7,12 +7,11 @@
 {
 	z-index: 1;
 	width: 1000px;
-	min-height: 665.7662690428284px;
+	min-height: 666px;
 	background-image: none;
 	border-style: none;
 	border-color: transparent;
 	background-color: #FFFFFF;
-	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -20,7 +19,7 @@
 #page_position_content
 {
 	margin-top: -1px;
-	margin-bottom: -31px;
+	margin-bottom: -87px;
 }
 
 #u166
@@ -244,7 +243,7 @@
 
 #u1098-4
 {
-	z-index: 52;
+	z-index: 53;
 	display: block;
 	vertical-align: top;
 	margin-left: 35px;
@@ -253,7 +252,7 @@
 
 #tab-panelu1102
 {
-	z-index: 56;
+	z-index: 57;
 	width: 523px;
 	border-width: 4px;
 	border-style: solid;
@@ -269,14 +268,14 @@
 
 #u1137
 {
-	z-index: 57;
+	z-index: 58;
 	width: 523px;
 	position: relative;
 }
 
 #u1146
 {
-	z-index: 58;
+	z-index: 59;
 	width: 522px;
 	min-height: 23px;
 	border-style: solid;
@@ -309,14 +308,14 @@
 
 #u1103
 {
-	z-index: 59;
+	z-index: 60;
 	width: 523px;
 	position: relative;
 }
 
 #u1104
 {
-	z-index: 60;
+	z-index: 61;
 	width: 521px;
 	border-style: solid;
 	border-color: #999999;
@@ -329,7 +328,7 @@
 
 #u1188
 {
-	z-index: 74;
+	z-index: 75;
 	width: 159px;
 	height: 159px;
 	border-width: 1px;
@@ -345,7 +344,7 @@
 
 #u1105-13
 {
-	z-index: 61;
+	z-index: 62;
 	display: block;
 	vertical-align: top;
 	position: relative;
@@ -371,9 +370,9 @@
 {
 	z-index: 10;
 	width: 1200px;
-	padding-bottom: 20px;
+	padding-bottom: 1px;
 	left: -100px;
-	margin-top: 71px;
+	margin-top: 127px;
 }
 
 #u163_align_to_page
@@ -390,7 +389,7 @@
 	width: 231px;
 	height: 42px;
 	margin-right: -10000px;
-	margin-top: 26px;
+	margin-top: 28px;
 	left: 163px;
 }
 
@@ -400,13 +399,23 @@
 	width: 245px;
 	min-height: 62px;
 	margin-right: -10000px;
-	margin-top: 18px;
+	margin-top: 20px;
 	left: 442px;
+}
+
+#u1204
+{
+	z-index: 52;
+	width: 200px;
+	min-height: 100px;
+	margin-right: -10000px;
+	margin-top: -1px;
+	left: 980px;
 }
 
 body
 {
-	padding-bottom: 29px;
+	padding-bottom: 86px;
 }
 
 #page .verticalspacer
