--- a/css/c_digo-fuente_-c_digo-objeto-y-ejecutable.css
+++ b/css/c_digo-fuente_-c_digo-objeto-y-ejecutable.css
@@ -7,12 +7,11 @@
 {
 	z-index: 1;
 	width: 1000px;
-	min-height: 1411.7662690428283px;
+	min-height: 1412px;
 	background-image: none;
 	border-style: none;
 	border-color: transparent;
 	background-color: #FFFFFF;
-	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -20,7 +19,7 @@
 #page_position_content
 {
 	margin-top: -1px;
-	margin-bottom: -31px;
+	margin-bottom: -87px;
 }
 
 #u166
@@ -241,7 +240,7 @@
 
 #u1043-4
 {
-	z-index: 52;
+	z-index: 53;
 	display: block;
 	vertical-align: top;
 	position: relative;
@@ -249,7 +248,7 @@
 
 #u1044-11
 {
-	z-index: 56;
+	z-index: 57;
 	display: block;
 	vertical-align: top;
 	margin-top: 16px;
@@ -268,7 +267,7 @@
 
 #u1045
 {
-	z-index: 67;
+	z-index: 68;
 	width: 539px;
 	margin-left: 20px;
 	margin-top: 5px;
@@ -277,7 +276,7 @@
 
 #u1051-21
 {
-	z-index: 69;
+	z-index: 70;
 	display: block;
 	vertical-align: top;
 	margin-left: 20px;
@@ -287,7 +286,7 @@
 
 #u1052
 {
-	z-index: 90;
+	z-index: 91;
 	width: 645px;
 	margin-left: 20px;
 	margin-top: 26px;
@@ -296,7 +295,7 @@
 
 #u1057-8
 {
-	z-index: 92;
+	z-index: 93;
 	width: 827px;
 	min-height: 67px;
 	border-width: 1px;
@@ -323,9 +322,9 @@
 {
 	z-index: 10;
 	width: 1200px;
-	padding-bottom: 20px;
+	padding-bottom: 1px;
 	left: -100px;
-	margin-top: 17px;
+	margin-top: 73px;
 }
 
 #u163_align_to_page
@@ -342,7 +341,7 @@
 	width: 231px;
 	height: 42px;
 	margin-right: -10000px;
-	margin-top: 26px;
+	margin-top: 28px;
 	left: 163px;
 }
 
@@ -352,13 +351,23 @@
 	width: 245px;
 	min-height: 62px;
 	margin-right: -10000px;
-	margin-top: 18px;
+	margin-top: 20px;
 	left: 442px;
+}
+
+#u1204
+{
+	z-index: 52;
+	width: 200px;
+	min-height: 100px;
+	margin-right: -10000px;
+	margin-top: -1px;
+	left: 980px;
 }
 
 body
 {
-	padding-bottom: 29px;
+	padding-bottom: 86px;
 }
 
 #page .verticalspacer
