--- a/css/introducci_n.css
+++ b/css/introducci_n.css
@@ -7,12 +7,11 @@
 {
 	z-index: 1;
 	width: 1000px;
-	min-height: 659.7662690428284px;
+	min-height: 660px;
 	background-image: none;
 	border-style: none;
 	border-color: transparent;
 	background-color: #FFFFFF;
-	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -20,7 +19,7 @@
 #page_position_content
 {
 	margin-top: -1px;
-	margin-bottom: -31px;
+	margin-bottom: -87px;
 }
 
 #u166
@@ -241,7 +240,7 @@
 
 #u838-4
 {
-	z-index: 52;
+	z-index: 53;
 	display: block;
 	vertical-align: top;
 	position: relative;
@@ -256,7 +255,7 @@
 
 #u839-14
 {
-	z-index: 56;
+	z-index: 57;
 	display: block;
 	vertical-align: top;
 	position: relative;
@@ -274,7 +273,7 @@
 
 #u840
 {
-	z-index: 70;
+	z-index: 71;
 	width: 287px;
 	height: 169px;
 	-pie-box-shadow: none;
@@ -292,7 +291,7 @@
 
 #u1001-4
 {
-	z-index: 81;
+	z-index: 82;
 	width: 287px;
 	font-size: 11px;
 	line-height: 13px;
@@ -311,7 +310,7 @@
 
 #u1000-10
 {
-	z-index: 71;
+	z-index: 72;
 	width: 748px;
 	min-height: 34px;
 	border-width: 1px;
@@ -338,9 +337,9 @@
 {
 	z-index: 10;
 	width: 1200px;
-	padding-bottom: 20px;
+	padding-bottom: 1px;
 	left: -100px;
-	margin-top: 6px;
+	margin-top: 62px;
 }
 
 #u163_align_to_page
@@ -357,7 +356,7 @@
 	width: 231px;
 	height: 42px;
 	margin-right: -10000px;
-	margin-top: 26px;
+	margin-top: 28px;
 	left: 163px;
 }
 
@@ -367,13 +366,23 @@
 	width: 245px;
 	min-height: 62px;
 	margin-right: -10000px;
-	margin-top: 18px;
+	margin-top: 20px;
 	left: 442px;
+}
+
+#u1204
+{
+	z-index: 52;
+	width: 200px;
+	min-height: 100px;
+	margin-right: -10000px;
+	margin-top: -1px;
+	left: 980px;
 }
 
 body
 {
-	padding-bottom: 29px;
+	padding-bottom: 86px;
 }
 
 #page .verticalspacer
