--- a/css/lecturas.css
+++ b/css/lecturas.css
@@ -7,12 +7,11 @@
 {
 	z-index: 1;
 	width: 1000px;
-	min-height: 718.7662690428285px;
+	min-height: 719px;
 	background-image: none;
 	border-style: none;
 	border-color: transparent;
 	background-color: #FFFFFF;
-	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -20,7 +19,7 @@
 #page_position_content
 {
 	margin-top: -1px;
-	margin-bottom: -31px;
+	margin-bottom: -87px;
 }
 
 #u166
@@ -233,7 +232,7 @@
 
 #u867
 {
-	z-index: 52;
+	z-index: 53;
 	width: 764px;
 	border-width: 4px;
 	border-style: solid;
@@ -258,7 +257,7 @@
 
 #u329-4
 {
-	z-index: 53;
+	z-index: 54;
 	display: block;
 	vertical-align: top;
 	margin-left: 191px;
@@ -267,7 +266,7 @@
 
 #buttonu774
 {
-	z-index: 66;
+	z-index: 67;
 	width: 195px;
 	border-width: 1px;
 	border-style: solid;
@@ -293,7 +292,7 @@
 
 #u775
 {
-	z-index: 68;
+	z-index: 69;
 	height: 23px;
 	width: 119px;
 	vertical-align: top;
@@ -319,7 +318,7 @@
 
 #buttonu849
 {
-	z-index: 70;
+	z-index: 71;
 	width: 258px;
 	border-width: 1px;
 	border-style: solid;
@@ -344,7 +343,7 @@
 
 #u851
 {
-	z-index: 72;
+	z-index: 73;
 	height: 44px;
 	width: 239px;
 	vertical-align: top;
@@ -362,7 +361,7 @@
 
 #buttonu858
 {
-	z-index: 78;
+	z-index: 79;
 	width: 196px;
 	border-width: 1px;
 	border-style: solid;
@@ -389,7 +388,7 @@
 
 #u860
 {
-	z-index: 80;
+	z-index: 81;
 	height: 44px;
 	width: 197px;
 	vertical-align: top;
@@ -407,7 +406,7 @@
 
 #buttonu855
 {
-	z-index: 74;
+	z-index: 75;
 	width: 236px;
 	border-width: 1px;
 	border-style: solid;
@@ -434,7 +433,7 @@
 
 #u857
 {
-	z-index: 76;
+	z-index: 77;
 	height: 44px;
 	width: 237px;
 	vertical-align: top;
@@ -460,7 +459,7 @@
 
 #buttonu861
 {
-	z-index: 82;
+	z-index: 83;
 	width: 198px;
 	border-width: 1px;
 	border-style: solid;
@@ -486,7 +485,7 @@
 
 #u863
 {
-	z-index: 84;
+	z-index: 85;
 	height: 44px;
 	width: 196px;
 	vertical-align: top;
@@ -504,7 +503,7 @@
 
 #buttonu864
 {
-	z-index: 86;
+	z-index: 87;
 	width: 195px;
 	border-width: 1px;
 	border-style: solid;
@@ -531,7 +530,7 @@
 
 #u865
 {
-	z-index: 88;
+	z-index: 89;
 	height: 44px;
 	width: 196px;
 	vertical-align: top;
@@ -558,7 +557,7 @@
 
 #u868
 {
-	z-index: 57;
+	z-index: 58;
 	width: 544px;
 	margin-left: 65px;
 	margin-top: 50px;
@@ -567,7 +566,7 @@
 
 #u327-4
 {
-	z-index: 58;
+	z-index: 59;
 	width: 417px;
 	min-height: 23px;
 	color: #005883;
@@ -578,7 +577,7 @@
 
 #u328-4
 {
-	z-index: 62;
+	z-index: 63;
 	width: 200px;
 	position: relative;
 	margin-right: -10000px;
@@ -588,9 +587,9 @@
 {
 	z-index: 10;
 	width: 1200px;
-	padding-bottom: 20px;
+	padding-bottom: 1px;
 	left: -100px;
-	margin-top: 8px;
+	margin-top: 64px;
 }
 
 #u163_align_to_page
@@ -607,7 +606,7 @@
 	width: 231px;
 	height: 42px;
 	margin-right: -10000px;
-	margin-top: 26px;
+	margin-top: 28px;
 	left: 163px;
 }
 
@@ -617,8 +616,18 @@
 	width: 245px;
 	min-height: 62px;
 	margin-right: -10000px;
-	margin-top: 18px;
+	margin-top: 20px;
 	left: 442px;
+}
+
+#u1204
+{
+	z-index: 52;
+	width: 200px;
+	min-height: 100px;
+	margin-right: -10000px;
+	margin-top: -1px;
+	left: 980px;
 }
 
 body
