--- a/css/tipos-de-lenguaje-de-programaci_n.css
+++ b/css/tipos-de-lenguaje-de-programaci_n.css
@@ -7,12 +7,11 @@
 {
 	z-index: 1;
 	width: 1000px;
-	min-height: 1500.7662690428283px;
+	min-height: 1501px;
 	background-image: none;
 	border-style: none;
 	border-color: transparent;
 	background-color: #FFFFFF;
-	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -20,7 +19,7 @@
 #page_position_content
 {
 	margin-top: -1px;
-	margin-bottom: -31px;
+	margin-bottom: -87px;
 }
 
 #u166
@@ -240,7 +239,7 @@
 
 #u1013-4
 {
-	z-index: 52;
+	z-index: 53;
 	display: block;
 	vertical-align: top;
 	position: relative;
@@ -255,7 +254,7 @@
 
 #u1014-16
 {
-	z-index: 56;
+	z-index: 57;
 	display: block;
 	vertical-align: top;
 	position: relative;
@@ -264,7 +263,7 @@
 
 #u1033
 {
-	z-index: 83;
+	z-index: 84;
 	width: 312px;
 	height: 197px;
 	border-style: none;
@@ -282,7 +281,7 @@
 
 #u1041-4
 {
-	z-index: 93;
+	z-index: 94;
 	width: 312px;
 	font-size: 11px;
 	line-height: 13px;
@@ -295,7 +294,7 @@
 
 #u1050-31
 {
-	z-index: 97;
+	z-index: 98;
 	display: block;
 	vertical-align: top;
 	position: relative;
@@ -315,7 +314,7 @@
 
 #u1022
 {
-	z-index: 72;
+	z-index: 73;
 	width: 663px;
 	margin-left: 17px;
 	margin-top: 12px;
@@ -324,7 +323,7 @@
 
 #u1027-9
 {
-	z-index: 74;
+	z-index: 75;
 	display: block;
 	vertical-align: top;
 	margin-left: 20px;
@@ -333,7 +332,7 @@
 
 #u1040-9
 {
-	z-index: 84;
+	z-index: 85;
 	width: 831px;
 	min-height: 34px;
 	border-width: 1px;
@@ -360,9 +359,9 @@
 {
 	z-index: 10;
 	width: 1200px;
-	padding-bottom: 20px;
+	padding-bottom: 1px;
 	left: -100px;
-	margin-top: 43px;
+	margin-top: 99px;
 }
 
 #u163_align_to_page
@@ -379,7 +378,7 @@
 	width: 231px;
 	height: 42px;
 	margin-right: -10000px;
-	margin-top: 26px;
+	margin-top: 28px;
 	left: 163px;
 }
 
@@ -389,13 +388,23 @@
 	width: 245px;
 	min-height: 62px;
 	margin-right: -10000px;
-	margin-top: 18px;
+	margin-top: 20px;
 	left: 442px;
+}
+
+#u1204
+{
+	z-index: 52;
+	width: 200px;
+	min-height: 100px;
+	margin-right: -10000px;
+	margin-top: -1px;
+	left: 980px;
 }
 
 body
 {
-	padding-bottom: 29px;
+	padding-bottom: 86px;
 }
 
 #page .verticalspacer
